# alpaca-trading

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alpaca_api/: main.py  models.py
app/: Dockerfile  main.py  settings.py
app/alpaca_api/: models.py  wrapper.py
