[tool.poetry]
name = "alpaca-trading"
version = "0.1.0"
description = "trading bot"
authors = ["Yegor"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
pydantic = "^1.9.0"
fastapi = "^0.70.1"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
flake8-awesome = "^1.3.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
